[package]
name = "resolvers"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
resolvers-core = { path = "./resolvers-core" }
libloading = "0.7.3"
lazy_static = "1.4.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
